<resources>
    <string name="app_name">Simple_Browser</string>
    <string name="menu_items">menu_items</string>
    <string name="Share">share</string>
    <string name="Cancel">cancel</string>
    <string name="Add_Bookmark">addbookmark</string>
    <string name="Forward">forward</string>
    <string name="Home">home</string>
    <string name="clear_text_webview">clear_text_webview</string>
    <string name="title_textView">title_textView</string>
    <string name="desktop_site">desktop_site</string>
    <string name="bookmark_dialog">bookmark_edit_dialog</string>
    <string name="search_the_webview">Search_the_webview</string>
    <string name="google_com">https://www.google.com/</string>
    <string name="bing_com">https://www.bing.com/</string>
    <string name="yahoo_com">https://www.yahoo.com/</string>
    <string name="duckduckgo_com">https://www.duckduckgo.com/</string>


    <string name="title_activity_settings">Settings</string>

    <string name="pref_choose_engine_key">pref_choose_engine_key</string>
    <string name="pref_home_page_switch_key">homepageswitchkey</string>
    <string name="pref_home_page_key">homepagekey</string>
    <string name="pref_themes_key">themeskey</string>
    <string name="pref_clear_browsing_data_key">clearbrowsingdatakey</string>


    <string name="pref_clear_data_after_app_closed_switch_key">cleardataassoonasappclosedswitchkey</string>
    <string name="pref_dark_brightness_key">dark_brigtness_key</string>
    <string name="pref_select_what_to_delete_after_app_is_closed_key">selectwhattodeleteafterappisclosed</string>
    <string name="incognito_mode_key">incognito_mode_key</string>

</resources>
